[package]
name = "zipcracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
zip = { version = "0.6", features = ["aes-crypto"] }
rayon = "1.7"
indicatif = "0.17"
crc32fast = "1.3"
filetime = "0.2"
time = { version = "0.3", features = ["macros", "local-offset"] }
colored = "2.0"
dialoguer = "0.10"
